--- a/Statistical Data Analyses.Rmd
+++ b/Statistical Data Analyses.Rmd
@@ -35,11 +35,7 @@ library(cowplot)
 
 # install.packages('jtools')
 library(jtools)
-
-
 options(scipen=5, digits = 5)
-
-1630-1873
 ```
 
 # Prepare the data to analysis 
@@ -65,13 +61,6 @@ df$family_Atopic_diseases_sum <- rowSums(df[,14:37]) # Did any one from family (
 df$mother_Atopic_diseases_sum <- rowSums(df[,14:17]) # Did a disease appear in a specific family member?
 df$father_Atopic_diseases_sum <- rowSums(df[,18:21])
 df$sibling_Atopic_diseases_sum <- rowSums(df[,22:37])
-# df = df %>% mutate(sibling_Atopic_diseases_sum = ifelse(number_of_children ==0, NA, sibling_Atopic_diseases_sum)) # inseret NA to sibiling atopic disease when there is no Sibilings 
-
-# Sum each disease 
-df <- df %>% mutate(sibling_asthma_sum = sibling1_asthma + sibling2_asthma + sibling3_asthma + sibling4_asthma,
-                    sibling_AD_sum = sibling1_atopic_dermatitis + sibling2_atopic_dermatitis + sibling3_atopic_dermatitis + sibling4_atopic_dermatitis,
-           sibling_Allergic_rhinitis_sum = sibling1_Allergic_rhinitis + sibling2_Allergic_rhinitis + sibling3_Allergic_rhinitis + sibling4_Allergic_rhinitis,
-                    sibling_FA_sum = sibling1_food_allergy + sibling2_food_allergy + sibling3_food_allergy + sibling4_food_allergy)
               
 # Binary variable for each family member 
 df <- df %>% mutate(family_Atopic_diseases = ifelse(family_Atopic_diseases_sum >0,1,0),
@@ -103,7 +92,6 @@ df$steroids_treatment24<- replace(df$steroids_treatment24, is.na(df$steroids_tre
 df$number_steroid_treat<- replace(df$number_steroid_treat
 , is.na(df$number_steroid_treat), 0)
 df$number_of_ABX_first_year<- replace(df$number_of_ABX_first_year, is.na(df$number_of_ABX_first_year), 0)
-df <- df %>% drop_na(AD_first_year, FA_first_year, ABX_fisrt_year,food_allergy_24_month, inhalation_24_month, AD_24_month) 
 
 df <- df %>% mutate(SES_group = ifelse(SES>8, '9-10', ifelse(SES>5, '6-8', '1-5')))# create a category SES variable :
 
@@ -115,8 +103,8 @@ df$ABX_second_year <- df$ABX_treatment_24_months
 df$feeding_type <- df$study_group_COMEET
 
 #option A of explanatory var:
-df <- df %>% mutate(is_atopic_first_year = ifelse((AD_first_year + FA_first_year + ABX_fisrt_year + HRAD_first_year)>0,1,0), 
-                    is_atopic_second_year = ifelse((AD_24_month + FA_second_year + ABX_second_year + HRAD_second_year)>0,1,0))
+df <- df %>% mutate(is_atopic_first_year = ifelse((AD_first_year + FA_first_year +  HRAD_first_year)>0,1,0), 
+                    is_atopic_second_year = ifelse((AD_second_year + FA_second_year + HRAD_second_year)>0,1,0))
 
 #Choosing explanatory variables: Ones that have a sufficient number of observation before and after Corona
 #The distribution of observations according to the timeline of the corona. Before the corona = 1, the first six months of the corona = 2  and after = 3:
@@ -128,17 +116,11 @@ g1 <- as.numeric(as.Date("2019-03-01")) - min(as.numeric(as.Date(df$DOB)))
 g2 <- as.numeric(as.Date("2020-03-11")) - min(as.numeric(as.Date(df$DOB)))
 g3 <- as.numeric(as.Date("2021-02-07")) - min(as.numeric(as.Date(df$DOB)))
 
+df$DOB_count = as.numeric(as.Date(df$DOB)) - min(as.numeric(as.Date(df$DOB)))
 
 df <- df %>% mutate(covid_time = ifelse(DOB < group1, 1, ifelse(DOB < group2, 2, ifelse(DOB<group3, 3, 4))))
 df <- df %>% mutate(Born_at = ifelse(covid_time == 1, 'Up to March19', ifelse(covid_time == 2, 'March19 - March20', 'March20 - Feb21')))
 
-df <- df %>% mutate(
-        family_asthma = ifelse(mother_asthma + father_asthma + sibling1_asthma + sibling2_asthma + sibling3_asthma + sibling4_asthma >0,1,0),
-        family_AD = ifelse(mother_atopic_dermatitis + father_atopic_dermatitis + sibling1_atopic_dermatitis + sibling2_atopic_dermatitis + sibling3_atopic_dermatitis + sibling4_atopic_dermatitis >0,1,0),
-        family_Allergic_rhinitis = ifelse(mother_Allergic_rhinitis + father_Allergic_rhinitis + sibling1_Allergic_rhinitis + sibling2_Allergic_rhinitis + sibling3_Allergic_rhinitis + sibling4_Allergic_rhinitis >0,1,0),
-        family_FA = ifelse(mother_food_allergy + father_food_allergy + sibling1_food_allergy + sibling2_food_allergy + sibling3_food_allergy + sibling4_food_allergy >0,1,0))
-df$DOB_count = as.numeric(as.Date(df$DOB)) - min(as.numeric(as.Date(df$DOB)))
- 
 # Change categorical variable to factors 
 df$feeding_type <- as.factor(df$feeding_type)
 df$gender <- as.factor(df$gender)
@@ -150,7 +132,6 @@ df$nursing_setup_at_12mo <- as.factor(df$nursing_setup_at_12mo)
 df$covid_time <- as.factor(df$covid_time)
 
 ## preapre the final data frame for the models 
-
 df_mdl <- df %>% drop_na(SES_group, gender, type_of_pregnancy, mother_education, vaccine_12mo, nursing_setup_at_12mo, is_atopic_first_year, is_atopic_second_year) %>% 
   filter(mother_year_birth >1960, mother_year_birth < 2000) %>% 
   mutate(is_atopic_both = ifelse(is_atopic_first_year >0, ifelse(is_atopic_second_year>0, 1, 0),0), is_atopic_any = ifelse(is_atopic_first_year + is_atopic_second_year >0,1,0))
@@ -158,49 +139,12 @@ df_mdl <- df %>% drop_na(SES_group, gender, type_of_pregnancy, mother_education,
 #reduce variance from this variable
 df_mdl$mother_year_birth = df_mdl$mother_year_birth - 1961
 
-
 attach(df_mdl)
-```
-
-
-## Sibilings 
-```{r}
-# insert NA to siblings atopic disease when there is no siblings
-df_sib = df %>% mutate(sibling_Atopic_diseases_sum = ifelse(number_of_children ==0, NA, sibling_Atopic_diseases_sum)) 
-
-# Check diff between babies with / without siblings 
-sibilings_df <- df_sib %>% select(record_id, number_of_children, is_atopic_first_year, is_atopic_second_year, sibling_Atopic_diseases_sum) %>% 
-  mutate(have_siblings = ifelse(number_of_children >0, 1, 0), sibling_Atopic_diseases = ifelse(sibling_Atopic_diseases_sum>0,1,0)) 
-
-sib_group <- sibilings_df %>% group_by(have_siblings) %>%  summarise(n = n(), is_atopic_first_year = sum(is_atopic_first_year), is_atopic_second_year = sum(is_atopic_second_year, na.rm=T))
-
-sib_group$is_atopic_first_year_perc = sib_group$is_atopic_first_year / sib_group$n
-sib_group$is_atopic_second_year_perc = sib_group$is_atopic_second_year / sib_group$n
-sib_group
-
-# check diff of sick siblings between is_atopic
-is_atopic_df1 <- sibilings_df %>% group_by(is_atopic_first_year) %>%  summarise(n = n(), sibling_Atopic_diseases = sum(sibling_Atopic_diseases, na.rm=T), .groups='drop')
-is_atopic_df1$perc = is_atopic_df1$sibling_Atopic_diseases/ is_atopic_df1$n
-is_atopic_df1
-
-
-is_atopic_df2 <- sibilings_df %>% group_by(is_atopic_second_year) %>%  summarise(n = n(), sibling_Atopic_diseases = sum(sibling_Atopic_diseases, na.rm=T), .groups='drop')
-is_atopic_df2$perc = is_atopic_df2$sibling_Atopic_diseases/ is_atopic_df2$n
-is_atopic_df2
-
-# Find correlation between atopic disease to sick siblings
-cor(sibilings_df$sibling_Atopic_diseases, sibilings_df$is_atopic_first_year, use = "pairwise.complete.obs")
-cor(sibilings_df$sibling_Atopic_diseases, sibilings_df$is_atopic_second_year, use = "pairwise.complete.obs")
-
-
-### conclusion - it seems like the connection between the two variables is very week, 
-### in addition the results at the models below with or without siblings are similar, in my opinion (Shahar) we can skip this variable. 
 ```
 
 
 # Descriptive statistics :
 ```{r, fig.width=10, fig.height=3}
-
 n_df = df_mdl %>% group_by(covid_time ) %>% summarise(n = n(), is_atopic_first_year = sum(is_atopic_first_year), is_atopic_second_year = sum(is_atopic_second_year), is_atopic_any = sum(is_atopic_any), is_atopic_both = sum(is_atopic_both)) 
 
 n_df <- n_df %>% mutate(is_atopic_first_year_perc = round(100*is_atopic_first_year/n), 
@@ -220,73 +164,11 @@ Descriptive_plot <-  ggplot(plot_df, aes(covid_time, y = precent, fill = as.fact
   theme(axis.text.x = element_text(color = 'white'), text = element_text(size =12), strip.text = element_text(face = "bold")) + labs(title = 'The percentage of babies with atopic disease') + 
   geom_text(aes(label = round(plot_df$precent,3)), vjust = 0, size = 3.5, fontface = "bold")
 
-ggsave('Descriptive_plot.jpeg',Descriptive_plot, width =10, height =3)
-
+# ggsave('Descriptive_plot.jpeg',Descriptive_plot, width =10, height =3)
+Descriptive_plot
+n_df
 ```
 
-```{r}
-
-
-```
-
-```{r}
-# exp_var1 <- df_mdl %>% select(c(SES_group, gender, mother_Atopic_diseases, father_Atopic_diseases, sibling_Atopic_diseases,
-#              mother_education, number_of_children, type_of_pregnancy, covid_time))
-# exp_var2 <- df_mdl %>% select(c(SES, gender, vaccine_12mo, feeding_type, mother_Atopic_diseases, father_Atopic_diseases, sibling_Atopic_diseases, 
-#              mother_education, number_of_children, type_of_pregnancy, nursing_setup_at_12mo, covid_time))
-# 
-# tablelist1 <- mapply(table, exp_var1)
-# tablelist2 <- mapply(table, exp_var2)
-
-# covid_time_prop <- round(tablelist1[['covid_time']] / sum(tablelist1[['covid_time']]),2)
-# boxplot(number_of_children, is_atopic_first_year)
-# # EDEN 
-# table(covid_time)
-# covid_time_prop
-# table(covid_time,is_atopic_first_year)
-# table(covid_time,is_atopic_second_year)
-# summary(number_of_children)
-# table(number_of_children, sibling_Atopic_diseases)
-
-```
-
-## arrange all the colnames by type for more calculation below 
-```{r}
-# MASBIR
-full_binari_exp <- c('Jew/Arab', 'gender', 'Allergy_total', 
-                'mother_asthma', 'mother_atopic_dermatitis', 'mother_Allergic_rhinitis', 'mother_food_allergy', 
-                'father_asthma', 'father_atopic_dermatitis', 'father_Allergic_rhinitis', 'father_food_allergy', 
-                'sibling1_asthma', 'sibling1_atopic_dermatitis', 'sibling1_Allergic_rhinitis', 'sibling1_food_allergy', 
-                'sibling2_asthma', 'sibling2_atopic_dermatitis', 'sibling2_Allergic_rhinitis', 'sibling2_food_allergy', 
-                'sibling3_asthma', 'sibling3_atopic_dermatitis', 'sibling3_Allergic_rhinitis', 'sibling3_food_allergy', 
-                'sibling4_asthma', 'sibling4_atopic_dermatitis', 'sibling4_Allergic_rhinitis', 'sibling4_food_allergy', 
-                'vaccine_12mo', 'prevention_therapy', 'steroids_treatment24',
-                'hospitalization_24_months', 'chronic_disease_24',
-                'family_Atopic_diseases', 'mother_Atopic_diseases', 'father_Atopic_diseases', 'sibling_Atopic_diseases')
-
-binari_exp <- c('Jew/Arab', 'gender', 'Allergy_total','vaccine_12mo', 'prevention_therapy',
-                'family_Atopic_diseases', 'mother_Atopic_diseases', 'father_Atopic_diseases', 'sibling_Atopic_diseases')
-
-continues_exp <- c('mother_year_birth', 'DOB', 'mother_education')
-
-discrite_exp <- c('SES', 'number_of_children', 'preganancy_number', 'number_of_ABX_first_year', 'number_inhalation',
-                  'family_Atopic_diseases_sum', 'mother_Atopic_diseases_sum', 'father_Atopic_diseases_sum', 'sibling_Atopic_diseases_sum',
-                  'sibling_asthma_sum', 'sibling_AD_sum', 'sibling_Allergic_rhinitis_sum', 'sibling_FA_sum')
-
-categoric_exp <- c('type_of_pregnancy', 'nursing_setup_at_12mo', 'covid_time')
-
-#MOOSBAR
-exploreatory_variables <- c('HRAD_first_year', 'AD_first_year', 'FA_first_year', 'ABX_fisrt_year',
-                            'HRAD_second_year', 'AD_second_year', 'FA_second_year', 'ABX_second_year',
-                            'is_atopic_first_year', 'is_atopic_second_year') 
-
-
-g1 <- as.numeric(as.Date("2019-03-01")) - min(as.numeric(as.Date(df$DOB)))
-g2 <- as.numeric(as.Date("2020-03-11")) - min(as.numeric(as.Date(df$DOB)))
-g3 <- as.numeric(as.Date("2021-02-07")) - min(as.numeric(as.Date(df$DOB)))
-
-arranged_df <- df %>% arrange(DOB) %>% select(DOB,DOB_count,covid_time)
-```
 
 ## Two dim table - covid time VS each column 
 ```{r}
@@ -298,31 +180,18 @@ covid_time_table <- function(kpi){
 # sapply(discrite_exp, covid_time_table, simplify =FALSE)
 # sapply(categoric_exp, covid_time_table, simplify =FALSE)
 # sapply(exploreatory_variables, covid_time_table, simplify =FALSE)
-
 ```
-
-
-## Chi2 test - checking for AB test - results = Failed ! 
-```{r, warning=F}
-alpha = 0.01
-chisq_goodness <- function(kpi){
-  t <- chisq.test(df[[kpi]], df$covid_time)
-  # cat(kpi, '| p_val' , t$p.value, '| SRM =' , t$p.value < alpha, '\n ')
-  return(list('p_val'=t$p.value, 'SRM'= t$p.value < alpha))} 
-
-
-# sapply(binari_exp, chisq_goodness, simplify =FALSE)
-# sapply(discrite_exp, chisq_goodness, simplify =FALSE)
-# sapply(categoric_exp, chisq_goodness, simplify =FALSE)
-# sapply(exploreatory_variables, chisq_goodness, simplify =FALSE)
-```
-
 
 
 # Regression 
 
 ## Logistic regression
 ```{r}
+n1  = n_df[[1,'n']]
+n2  = n_df[[2,'n']]
+n3  = n_df[[3,'n']]
+n4  = n_df[[4,'n']]
+
 mdl1 <- glm(is_atopic_first_year ~ SES_group + gender + type_of_pregnancy +
                mother_Atopic_diseases + father_Atopic_diseases +
               mother_year_birth + mother_education + number_of_children + covid_time  , data = df_mdl, family = "binomial")
@@ -338,9 +207,8 @@ mdl2_atopic <- glm(is_atopic_second_year ~ is_atopic_first_year + SES_group + ge
              type_of_pregnancy  + vaccine_12mo  + nursing_setup_at_12mo + covid_time, data=df_mdl, family='binomial')
 
 # summary(mdl1)
-summary(mdl2)
-# summ(mdl1)
-summary(mdl2_atopic)
+# summary(mdl2)
+# summary(mdl2_atopic)
 ```
 
 
@@ -352,51 +220,26 @@ gam1 <- gam(is_atopic_first_year ~ SES_group + gender + type_of_pregnancy +
                mother_Atopic_diseases + father_Atopic_diseases +
                mother_year_birth + mother_education + number_of_children +
                s(DOB_count, bs='cr') ,data=df_mdl, family=binomial)
-# summary(gam1)
 
 gam2 <- gam(is_atopic_second_year ~ SES_group + gender + 
              mother_Atopic_diseases + father_Atopic_diseases +
              mother_year_birth + mother_education + number_of_children + 
              type_of_pregnancy  + vaccine_12mo  + nursing_setup_at_12mo + s(DOB_count, bs='cr'), data=df_mdl, family=binomial)
 
-summary(gam2)
 
-gam2_atopic <- gam(is_atopic_second_year ~ is_atopic_first_year + SES_group + gender + 
+gam2_atopic <- gam(is_atopic_second_year ~ is_atopic_first_year + SES_group + gender +
              mother_Atopic_diseases + father_Atopic_diseases +
-             mother_year_birth + mother_education + number_of_children + 
+             mother_year_birth + mother_education + number_of_children +
              type_of_pregnancy  + vaccine_12mo  + nursing_setup_at_12mo + s(DOB_count, bs='cr') ,data=df_mdl, family=binomial)
 
-summary(gam2_atopic)
-```
 
-
-
-
-## stargazer
-```{r}
-# stargazer(mdl1 , type="html", out="logistic 1 Y.html", out.header=TRUE)
-
-# stargazer(mdl2 , type="html", out="logistic 2 Y.html", out.header=TRUE)
-
-#stargazer(mdl1, mdl2 , type="html", out="logistic.html", out.header=TRUE)
-# 
-# stargazer(gam1 , type="html", out="GAM 1 Y.html", out.header=TRUE)
-# 
-# stargazer(gam1 , type="html", out="GAM 2 Y.html", out.header=TRUE)
-
-#stargazer(gam1, gam2 , type="html", out="GAM.html", out.header=TRUE)
-# 
-# stargazer(mdl1,gam1 , type="html", out="1 Y regressions.html", out.header=TRUE)
-# 
-# stargazer(mdl2,gam2 , type="html", out="2 Y regressions.html", out.header=TRUE)
-
-# table(df_mdl$covid_time,df_mdl$is_atopic_first_year)
-# 
-# table(df_mdl$covid_time,df_mdl$is_atopic_second_year)
+# summary(gam1)
+# summary(gam2)
+# summary(gam2_atopic)
+# plot.gam(gam2_atopic)
 ```
 
 # Graphs
-
 ## first year 
 ```{r}
 res_log1 = as.data.frame(summary(mdl1)$coefficients)
@@ -405,13 +248,13 @@ df_gam1 <- plot(getViz(gam1))$plots[[1]]$data$fit
 df_gam1 <- df_gam1 %>% mutate(Born_at = if_else(x< g1, 'Up to March19', ifelse(x<g2, 'March19 - March20', ifelse(x<g3,'March20 - Feb21','From Feb21'))))
 df_gam1$Born_at <- as.factor(df_gam1$Born_at)
 
-df_gam1 <- df_gam1 %>% 
-  mutate(y_log = if_else(x < g1, 0, ifelse(x<g2, mdl1$coefficients['covid_time2'] , 
+df_gam1 <- df_gam1 %>%
+  mutate(y_log = if_else(x < g1, 0, ifelse(x<g2, mdl1$coefficients['covid_time2'] ,
                                            ifelse(x<g3 ,mdl1$coefficients['covid_time3'], mdl1$coefficients['covid_time4']))),
-         
-                  se_log = if_else(x < g1, res_log1['(Intercept)', 'Std. Error'], 
-                               ifelse(x<g2, res_log1['covid_time2', 'Std. Error'] , 
-                                      ifelse(x<g3 , res_log1['covid_time3', 'Std. Error'], 
+
+                  se_log = if_else(x < g1, res_log1['(Intercept)', 'Std. Error'],
+                               ifelse(x<g2, res_log1['covid_time2', 'Std. Error'],
+                                      ifelse(x<g3 , res_log1['covid_time3', 'Std. Error'],
                                              res_log1['covid_time4', 'Std. Error']))))
 
 #set dates 
@@ -435,10 +278,11 @@ plot1_first_year <- ggplot(df_gam1, aes(Date,y, fill = Born_at)) +
   scale_color_manual(values=viridis(5)) + scale_fill_manual(values=viridis(5)) + theme_bw() +
   labs(title = "Birth date coefficient distribution", subtitle ="During the first year of a baby's life", x = 'Birth date', y = 'coefficient')+
   geom_hline(yintercept = 0, linetype='dashed', alpha = 0.2) + 
-  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y")
+  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y") + theme(legend.position = "none")
 
-# ggsave('first_year_mdl.jpeg',plot1_first_year, width =10, height =6)
+# ggsave('full_first_year_mdl.jpeg',plot1_first_year, width =8, height =6)
 plot1_first_year
+
 ```
 
 ## Second year
@@ -479,9 +323,9 @@ plot2_second_year <- ggplot(df_gam2, aes(Date,y, fill = Born_at)) +
   scale_color_manual(values=viridis(5)) + scale_fill_manual(values=viridis(5)) + theme_bw() +
   labs(title = "Birth date coefficient distribution", subtitle ="During the second year of a baby's life", x = 'Birth date', y = 'coefficient')+
   geom_hline(yintercept = 0, linetype='dashed', alpha = 0.2)  + 
-  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y")
+  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y") + theme(legend.position = "none")
 
-# ggsave('second_year_mdl.jpeg',plot2_second_year, width =10, height =6)
+# ggsave('full_second_year_mdl.jpeg',plot2_second_year, width =8, height =6)
 plot2_second_year
 ```
 ## Only Log model 
@@ -497,7 +341,7 @@ log_plot1_first_year <- ggplot(df_gam1, aes(Date,y, fill = Born_at)) +
   scale_color_manual(values=viridis(5)) + scale_fill_manual(values=viridis(5)) + theme_bw() +
   labs(title = "Birth date coefficient distribution - Logistic model", subtitle ="During the first year of a baby's life", x = 'Birth date', y = 'coefficient')+
   geom_hline(yintercept = 0, linetype='dashed', alpha = 0.2) + 
-  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y")
+  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y") + theme(legend.position = "none")
 
 log_plot1_first_year
 
@@ -511,12 +355,12 @@ Log_plot2_second_year <- ggplot(df_gam2, aes(Date,y, fill = Born_at)) +
   scale_color_manual(values=viridis(5)) + scale_fill_manual(values=viridis(5)) + theme_bw() +
   labs(title = "Birth date coefficient distribution - Logistic model", subtitle ="During the second year of a baby's life", x = 'Birth date', y = 'coefficient')+
   geom_hline(yintercept = 0, linetype='dashed', alpha = 0.2)  + 
-  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y")
+  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y") + theme(legend.position = "none")
 
 Log_plot2_second_year
 
-# ggsave('Logistic_model_plot_first_year.jpeg',log_plot1_first_year, width =10, height =6)
-# ggsave('Logistic_model_plot_second_year.jpeg',Log_plot2_second_year, width =10, height =6)
+# ggsave('Logistic_model_first_year.jpeg',log_plot1_first_year, width =8, height =6)
+# ggsave('Logistic_model_second_year.jpeg',Log_plot2_second_year, width =8, height =6)
 
 ```
 
@@ -531,7 +375,7 @@ GAM_plot1_first_year <- ggplot(df_gam1, aes(Date,y, fill = Born_at)) +
   scale_color_manual(values=viridis(5)) + scale_fill_manual(values=viridis(5)) + theme_bw() +
   labs(title = "Birth date coefficient distribution - GAM model", subtitle ="During the first year of a baby's life", x = 'Birth date', y = 'coefficient')+
   geom_hline(yintercept = 0, linetype='dashed', alpha = 0.2) + 
-  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y")
+  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y") + theme(legend.position = "none")
 
 GAM_plot1_first_year
 
@@ -543,13 +387,12 @@ GAM_plot2_second_year <- ggplot(df_gam2, aes(Date,y, fill = Born_at)) +
   scale_color_manual(values=viridis(5)) + scale_fill_manual(values=viridis(5)) + theme_bw() +
   labs(title = "Birth date coefficient distribution - GAM model", subtitle ="During the second year of a baby's life", x = 'Birth date', y = 'coefficient')+
   geom_hline(yintercept = 0, linetype='dashed', alpha = 0.2)  + 
-  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y")
+  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y") + theme(legend.position = "none")
 
 GAM_plot2_second_year
 
-# ggsave('GAM_model_plot_first_year.jpeg',GAM_plot1_first_year, width =10, height =6)
-# ggsave('GAM_model_plot_second_year.jpeg',GAM_plot2_second_year, width =10, height =6)
-
+# ggsave('GAM_model_first_year.jpeg',GAM_plot1_first_year, width =8, height =6)
+# ggsave('GAM_model_second_year.jpeg',GAM_plot2_second_year, width =8, height =6)
 ```
 
 ## Second year - atopic
@@ -592,7 +435,7 @@ plot2_second_year <- ggplot(df_gam2, aes(Date,y, fill = Born_at)) +
   geom_hline(yintercept = 0, linetype='dashed', alpha = 0.2)  + 
   scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y")
 
-# ggsave('second_year_mdl_with_atopic_first_year.jpeg',plot2_second_year, width =10, height =6)
+# ggsave('second_year_mdl_with_atopic_first_year.jpeg',plot2_second_year, width =8, height =6)
 plot2_second_year
 ```
 
@@ -666,8 +509,8 @@ typical_baby_plot2 <- ggplot(typical_person, aes(DOB, gam_predict_second_year)) 
 labs(title = "Atopic disease risk", subtitle = "During the second year of a baby's life" , x = 'Birth date', y = 'Probability')   + 
   scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y")
 
-# ggsave('typical_baby1.jpeg',typical_baby_plot1, width =10, height =6)
-# ggsave('typical_baby2.jpeg',typical_baby_plot2, width =10, height =6)
+# ggsave('typical_baby1.jpeg',typical_baby_plot1, width =8, height =6)
+# ggsave('typical_baby2.jpeg',typical_baby_plot2, width =8, height =6)
 
 typical_baby_plot1
 typical_baby_plot2
@@ -681,7 +524,7 @@ prob_first_year_log <- ggplot(typical_person, aes(DOB, gam_predict_first_year)) 
                         geom_ribbon(aes(ymin = reg_predict_first_year - reg_p_se1*qnorm(0.975), ymax = reg_predict_first_year + reg_p_se1*qnorm(0.975), y = NULL, fill = Born_at), alpha=0.1)+   
                         scale_color_manual(values=viridis(4)) + scale_fill_manual(values=viridis(4)) + theme_bw() +
                         labs(title = "Atopic disease risk - Logistic model", subtitle = "During the first year of a baby's life - Logistic model" , x = 'Birth date', y = 'Probability')  + 
-                        scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y")
+                        scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y") + theme(legend.position = "none")
 prob_first_year_log
 
 
@@ -691,7 +534,7 @@ prob_first_year_GAM <- ggplot(typical_person, aes(DOB, gam_predict_first_year)) 
                         geom_ribbon(aes(ymin = gam_predict_first_year - gam_p_se1*qnorm(0.975), ymax = gam_predict_first_year + gam_p_se1*qnorm(0.975), y = NULL, fill = Born_at), alpha=0.1)+ 
                         scale_color_manual(values=viridis(4)) + scale_fill_manual(values=viridis(4)) + theme_bw() +
                         labs(title = "Atopic disease risk - GAM model", subtitle = "During the first year of a baby's life" , x = 'Birth date', y = 'Probability')  + 
-                        scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y")
+                        scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y") + theme(legend.position = "none")
 prob_first_year_GAM
 
 prob_second_year_log <- ggplot(typical_person, aes(DOB, gam_predict_second_year)) +
@@ -699,7 +542,7 @@ prob_second_year_log <- ggplot(typical_person, aes(DOB, gam_predict_second_year)
   geom_ribbon(aes(ymin = reg_predict_second_year - reg_p_se2*qnorm(0.975), ymax = reg_predict_second_year + reg_p_se2*qnorm(0.975), y = NULL, fill = Born_at), alpha=0.1)+   
   scale_color_manual(values=viridis(4)) + scale_fill_manual(values=viridis(4)) + theme_bw() +
 labs(title = "Atopic disease risk - Logistic model", subtitle = "During the second year of a baby's life" , x = 'Birth date', y = 'Probability')   + 
-  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y")
+  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y") + theme(legend.position = "none")
 prob_second_year_log
 
 prob_second_year_GAM <- ggplot(typical_person, aes(DOB, gam_predict_second_year)) +
@@ -707,14 +550,14 @@ prob_second_year_GAM <- ggplot(typical_person, aes(DOB, gam_predict_second_year)
   geom_ribbon(aes(ymin = gam_predict_second_year - gam_p_se2*qnorm(0.975), ymax = gam_predict_second_year + gam_p_se2*qnorm(0.975), y=NULL, fill=Born_at), alpha=0.1)+ 
   scale_color_manual(values=viridis(4)) + scale_fill_manual(values=viridis(4)) + theme_bw() +
 labs(title = "Atopic disease risk - GAM model", subtitle = "During the second year of a baby's life" , x = 'Birth date', y = 'Probability')   + 
-  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y")
+  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y") + theme(legend.position = "none")
 prob_second_year_GAM
 
-
-# ggsave('probabilty_Log_model_plot_first_year.jpeg',prob_first_year_log, width =10, height =6)
-# ggsave('probabilty_GAM_model_plot_first_year.jpeg',prob_first_year_GAM, width =10, height =6)
-# ggsave('probabilty_Log_model_plot_second_year.jpeg',prob_second_year_log, width =10, height =6)
-# ggsave('probabilty_GAM_model_plot_second_year.jpeg',prob_second_year_GAM, width =10, height =6)
+# 
+# ggsave('probabilty_Log_model_plot_first_year.jpeg',prob_first_year_log, width =8, height =6)
+# ggsave('probabilty_GAM_model_plot_first_year.jpeg',prob_first_year_GAM, width =8, height =6)
+# ggsave('probabilty_Log_model_plot_second_year.jpeg',prob_second_year_log, width =8, height =6)
+# ggsave('probabilty_GAM_model_plot_second_year.jpeg',prob_second_year_GAM, width =8, height =6)
 ```
 
 
@@ -728,7 +571,7 @@ comp <- data.frame('DOB' = typical_person$DOB, 'Born_at' = typical_person$Born_a
                    'reg_predict_second_year' = typical_person$reg_predict_second_year,
                    'reg_predict_second_year_sick1' = typical_person$reg_predict_second_year_sick1)
 
-ggplot(comp) +
+com_plot <- ggplot(comp) +
   geom_line(aes(x = DOB, y = gam_predict_second_year, col = Born_at), size = 1) +
   geom_line(aes(x = DOB, y = gam_predict_second_year_sick1, col = Born_at), size = 1) +
   
@@ -740,189 +583,14 @@ ggplot(comp) +
   
   labs(title = "Compare Atopic disease risk in the second year", subtitle = "With and without atopic disease as variable in the model (Healthy baby in the first year)" , x = 'Birth date', y = 'Probability') + 
   scale_color_manual(values=viridis(4)) + scale_fill_manual(values=viridis(4)) + theme_bw() +
-  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y") + ylim(c(0.45,0.8))
+  scale_x_date(date_breaks = "4 months", date_labels = "%b\n%y") + ylim(c(0.2,0.8))
 
 comp <- comp %>% mutate(gam_diff = gam_predict_second_year_sick1 - gam_predict_second_year, 
                         log_diff = reg_predict_second_year_sick1 - reg_predict_second_year)  
 comp %>% group_by(Born_at) %>% summarise(round(100*mean(gam_diff)), round(100*mean(log_diff)))
+
+ggsave('com_plot_of_gam2.jpeg',com_plot, width =10, height =6)
+
 ```
 
-
-
-
-### more plot of typical babies 
-```{r}
-# Creating prediction of atopic disease for typical person  
-getmode <- function(v) {
-   uniqv <- unique(v)
-   uniqv[which.max(tabulate(match(v, uniqv)))]}
-
-n <- length(df_mdl$record_id) # number of rows in the data 
-
-# Data frame that contained the typical person n times in order to predict atopic diseas  
-typical_person <- data.frame(SES_group = rep(getmode(SES_group),n), 
-                             gender = rep(getmode(gender),n),
-                             type_of_pregnancy = rep(getmode(type_of_pregnancy),n),
-                             mother_Atopic_diseases = rep(getmode(mother_Atopic_diseases),n),
-                             father_Atopic_diseases = rep(getmode(father_Atopic_diseases),n),
-                             mother_year_birth = rep(mean(df_mdl$mother_year_birth),n),
-                             mother_education = rep(getmode(mother_education),n),
-                             number_of_children = rep(getmode(number_of_children),n),
-                             nursing_setup_at_12mo = rep(getmode(nursing_setup_at_12mo),n),
-                             vaccine_12mo = rep(getmode(vaccine_12mo),n),
-                             baby_number= rep(1,n))
-
-set.seed(111)
-typical_person_2 <- data.frame(SES_group = rep(sample(unique(na.omit(SES_group)),1),n), 
-                              gender = rep(sample(unique(na.omit(gender)),1),n),
-                              type_of_pregnancy = rep(sample(unique(na.omit(type_of_pregnancy)),1),n),
-                              mother_Atopic_diseases = rep(sample(unique(na.omit(mother_Atopic_diseases)),1),n),
-                              father_Atopic_diseases = rep(sample(unique(na.omit(father_Atopic_diseases)),1),n),
-                              mother_year_birth = rep(sample(unique(na.omit(df_mdl$mother_year_birth)),1),n),
-                              mother_education = rep(sample(unique(na.omit(mother_education)),1),n),
-                              number_of_children = rep(sample(unique(na.omit(number_of_children)),1),n),
-                              nursing_setup_at_12mo = rep(sample(unique(na.omit(nursing_setup_at_12mo)),1),n),
-                              vaccine_12mo = rep(sample(unique(na.omit(vaccine_12mo)),1),n),
-                              baby_number= rep(2,n))
-
-typical_person_3 <- data.frame(SES_group = rep(sample(unique(na.omit(SES_group)),1),n), 
-                              gender = rep(sample(unique(na.omit(gender)),1),n),
-                              type_of_pregnancy = rep(sample(unique(na.omit(type_of_pregnancy)),1),n),
-                              mother_Atopic_diseases = rep(sample(unique(na.omit(mother_Atopic_diseases)),1),n),
-                              father_Atopic_diseases = rep(sample(unique(na.omit(father_Atopic_diseases)),1),n),
-                              mother_year_birth = rep(sample(unique(na.omit(df_mdl$mother_year_birth)),1),n),
-                              mother_education = rep(sample(unique(na.omit(mother_education)),1),n),
-                              number_of_children = rep(sample(unique(na.omit(number_of_children)),1),n),
-                              nursing_setup_at_12mo = rep(sample(unique(na.omit(nursing_setup_at_12mo)),1),n),
-                              vaccine_12mo = rep(sample(unique(na.omit(vaccine_12mo)),1),n),
-                              baby_number= rep(3,n))
-
-typical_person_4 <- data.frame(SES_group = rep(sample(unique(na.omit(SES_group)),1),n), 
-                              gender = rep(sample(unique(na.omit(gender)),1),n),
-                              type_of_pregnancy = rep(sample(unique(na.omit(type_of_pregnancy)),1),n),
-                              mother_Atopic_diseases = rep(sample(unique(na.omit(mother_Atopic_diseases)),1),n),
-                              father_Atopic_diseases = rep(sample(unique(na.omit(father_Atopic_diseases)),1),n),
-                              mother_year_birth = rep(sample(unique(na.omit(df_mdl$mother_year_birth)),1),n),
-                              mother_education = rep(sample(unique(na.omit(mother_education)),1),n),
-                              number_of_children = rep(sample(unique(na.omit(number_of_children)),1),n),
-                              nursing_setup_at_12mo = rep(sample(unique(na.omit(nursing_setup_at_12mo)),1),n),
-                              vaccine_12mo = rep(sample(unique(na.omit(vaccine_12mo)),1),n),
-                              baby_number= rep(4,n))
-
-
-# adding DOB for each observation 
-#first baby
-typical_person <- typical_person %>% mutate(DOB = df_mdl$DOB, DOB_count = df_mdl$DOB_count)
-typical_person <- typical_person %>% mutate(Born_at = if_else(DOB_count< g1, 'Up to March19', ifelse(DOB_count<g2, 'March19 - March20', ifelse(DOB_count<g3,'March20 - Feb21','From Feb21'))), covid_time = if_else(DOB_count< g1, 1, ifelse(DOB_count<g2, 2, ifelse(DOB_count<g3,3,4))))
-typical_person$covid_time <- as.factor(typical_person$covid_time)
-#second baby
-typical_person_2 <- typical_person_2 %>% mutate(DOB = df_mdl$DOB, DOB_count = df_mdl$DOB_count)
-typical_person_2 <- typical_person_2 %>% mutate(Born_at = if_else(DOB_count< g1, 'Up to March19', ifelse(DOB_count<g2, 'March19 - March20', ifelse(DOB_count<g3,'March20 - Feb21','From Feb21'))), covid_time = if_else(DOB_count< g1, 1, ifelse(DOB_count<g2, 2, ifelse(DOB_count<g3,3,4))))
-typical_person_2$covid_time <- as.factor(typical_person_2$covid_time)
-#third baby
-typical_person_3 <- typical_person_3 %>% mutate(DOB = df_mdl$DOB, DOB_count = df_mdl$DOB_count)
-typical_person_3 <- typical_person_3 %>% mutate(Born_at = if_else(DOB_count< g1, 'Up to March19', ifelse(DOB_count<g2, 'March19 - March20', ifelse(DOB_count<g3,'March20 - Feb21','From Feb21'))), covid_time = if_else(DOB_count< g1, 1, ifelse(DOB_count<g2, 2, ifelse(DOB_count<g3,3,4))))
-typical_person_3$covid_time <- as.factor(typical_person_3$covid_time)
-#fourth baby
-typical_person_4 <- typical_person_4 %>% mutate(DOB = df_mdl$DOB, DOB_count = df_mdl$DOB_count)
-typical_person_4 <- typical_person_4 %>% mutate(Born_at = if_else(DOB_count< g1, 'Up to March19', ifelse(DOB_count<g2, 'March19 - March20', ifelse(DOB_count<g3,'March20 - Feb21','From Feb21'))), covid_time = if_else(DOB_count< g1, 1, ifelse(DOB_count<g2, 2, ifelse(DOB_count<g3,3,4))))
-typical_person_4$covid_time <- as.factor(typical_person_4$covid_time)
-
-
-typical_person <- rbind(typical_person,typical_person_2,typical_person_3,typical_person_4)
-
-# predict 
-typical_person$gam_predict_first_year <- predict.gam(gam1, typical_person, type = 'response')
-typical_person$gam_predict_second_year <- predict.gam(gam2, typical_person, type = 'response')
-typical_person$reg_predict_first_year <- predict(mdl1, typical_person, type = 'response')
-typical_person$reg_predict_second_year <- predict(mdl2, typical_person, type = 'response')
-
-
-# ggplot(typical_person,aes(DOB, gam_predict_first_year)) +
-#   geom_line(aes(color=as.factor(baby_number),linetype =Born_at ) ,size = 1)+
-#   geom_line(aes(DOB, reg_predict_first_year,color=as.factor(baby_number),linetype =Born_at ),size = 1)+
-#   scale_linetype_manual(values = c("dotdash","dotted","dashed", "solid"))
-# 
-# ggplot(typical_person,aes(DOB, gam_predict_first_year)) +
-#   geom_line(aes(color=as.factor(baby_number)) ,size = 1)+
-#   geom_line(aes(DOB, reg_predict_first_year,color=as.factor(baby_number)),size = 1)+
-#   geom_vline(xintercept = c(as.Date("2019-03-01")+1,as.Date("2020-03-11")+1,as.Date("2021-02-07")+1), size=1.5)
-```
-
-
-
-```{r, fig.width=10}
-# Plot the predictions : 
-# first year
-baby_1_1Y <- ggplot(typical_person %>% filter(baby_number == 1), aes(DOB, gam_predict_first_year)) +
-  geom_line(aes(col = Born_at), size = 1) +
-  geom_line(aes(DOB, reg_predict_first_year, col = Born_at), size = 1) +
-  scale_color_manual(values=viridis(4)) + scale_fill_manual(values=viridis(4)) + theme_bw() +
-  labs(title = '', x = 'Birth date', y = 'Prob')+
-  ylim(c(0.5,1))#+ 
-  #theme(legend.position = "none")
-
-baby_2_1Y <- ggplot(typical_person %>% filter(baby_number == 2), aes(DOB, gam_predict_first_year)) +
-  geom_line(aes(col = Born_at), size = 1) +
-  geom_line(aes(DOB, reg_predict_first_year, col = Born_at), size = 1) +
-  scale_color_manual(values=viridis(4)) + scale_fill_manual(values=viridis(4)) + theme_bw() +
-  labs(title = 'Prob to atopic disease in first year using GAM and Log reggression', x = 'Birth date', y = 'Prob')+
-  ylim(c(0.5,1))#+ 
-  #theme(legend.position = "none")
-
-baby_3_1Y <- ggplot(typical_person %>% filter(baby_number == 3), aes(DOB, gam_predict_first_year)) +
-  geom_line(aes(col = Born_at), size = 1) +
-  geom_line(aes(DOB, reg_predict_first_year, col = Born_at), size = 1) +
-  scale_color_manual(values=viridis(4)) + scale_fill_manual(values=viridis(4)) + theme_bw() +
-  labs(title = 'Prob to atopic disease in first year using GAM and Log reggression', x = 'Birth date', y = 'Prob')+
-  ylim(c(0.5,1))#+ 
-  #theme(legend.position = "none")
-
-baby_4_1Y <- ggplot(typical_person %>% filter(baby_number == 4), aes(DOB, gam_predict_first_year)) +
-  geom_line(aes(col = Born_at), size = 1) +
-  geom_line(aes(DOB, reg_predict_first_year, col = Born_at), size = 1) +
-  scale_color_manual(values=viridis(4)) + scale_fill_manual(values=viridis(4)) + theme_bw() +
-  labs(title = 'Prob to atopic disease in first year using GAM and Log reggression', x = 'Birth date', y = 'Prob')+
-  ylim(c(0.5,1))
-
-plot_grid(baby_1_1Y, baby_2_1Y, baby_3_1Y, baby_4_1Y, ncol = 2)
-
-
-
-# second year:
-
-baby_1_2Y <- ggplot(typical_person %>% filter(baby_number == 1), aes(DOB, gam_predict_second_year)) +
-  geom_line(aes(col = Born_at), size = 1) +
-  geom_line(aes(DOB, reg_predict_second_year, col = Born_at), size = 1) +
-  scale_color_manual(values=viridis(4)) + scale_fill_manual(values=viridis(4)) + theme_bw() +
-  labs(title = 'Prob to atopic disease in first year using GAM and Log reggression', x = 'Birth date', y = 'Prob')+
-  ylim(c(0.2,0.8))#+ 
-  #theme(legend.position = "none")
-
-baby_2_2Y <- ggplot(typical_person %>% filter(baby_number == 2), aes(DOB, gam_predict_second_year)) +
-  geom_line(aes(col = Born_at), size = 1) +
-  geom_line(aes(DOB, reg_predict_second_year, col = Born_at), size = 1) +
-  scale_color_manual(values=viridis(4)) + scale_fill_manual(values=viridis(4)) + theme_bw() +
-  labs(title = 'Prob to atopic disease in first year using GAM and Log reggression', x = 'Birth date', y = 'Prob')+
-  ylim(c(0.2,0.8))#+ 
-  #theme(legend.position = "none")
-
-baby_3_2Y <- ggplot(typical_person %>% filter(baby_number == 3), aes(DOB, gam_predict_second_year)) +
-  geom_line(aes(col = Born_at), size = 1) +
-  geom_line(aes(DOB, reg_predict_second_year, col = Born_at), size = 1) +
-  scale_color_manual(values=viridis(4)) + scale_fill_manual(values=viridis(4)) + theme_bw() +
-  labs(title = 'Prob to atopic disease in first year using GAM and Log reggression', x = 'Birth date', y = 'Prob')+
-  ylim(c(0.2,0.8))#+ 
-  #theme(legend.position = "none")
-
-baby_4_2Y <- ggplot(typical_person %>% filter(baby_number == 4), aes(DOB, gam_predict_second_year)) +
-  geom_line(aes(col = Born_at), size = 1) +
-  geom_line(aes(DOB, reg_predict_second_year, col = Born_at), size = 1) +
-  scale_color_manual(values=viridis(4)) + scale_fill_manual(values=viridis(4)) + theme_bw() +
-  labs(title = 'Prob to atopic disease in first year using GAM and Log reggression', x = 'Birth date', y = 'Prob')+
-  ylim(c(0.2,0.8))
-
-
-plot_grid(baby_1_2Y, baby_2_2Y, baby_3_2Y, baby_4_2Y, ncol = 2)
-```
 
